[project]
name = "wakeup4smu"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "maskpass>=0.3.7",
    "pillow>=11.3.0",
    "pycryptodome>=3.23.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.5",
    "ddddocr==1.5.6"
]
[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
